samples/_failures_safe/1761706758_7c454f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4e1d514.c: In function ‘multiply_matrices’:
./samples/SAFE/__tmp_a4e1d514.c:122:13: error: expected identifier or ‘(’ at end of input
  122 |             int
      |             ^~~
./samples/SAFE/__tmp_a4e1d514.c:122:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a4e1d514.c:122:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a4e1d514.c:122:13: error: expected declaration or statement at end of input
